--- a/infoSecurity.html
+++ b/infoSecurity.html
@@ -32,7 +32,98 @@
                 </ul>
             </div>
             <div class="securityCon">
-
+                <div class="itemCon">
+                    <div class="itemLeft"><span>安全漏洞</span></div>
+                    <div class="itemRight">
+                        <ul>
+                            <li><div class="item"><span>安全漏洞加固比率</span><input><span>%</span></div></li>
+                            <li>
+                                <div class="item marginRight"><p>服务器：</p></div>
+                                <div class="item"><span>危急</span><input><span>个</span></div>
+                                <div class="item"><span>高风险</span><input><span>个</span></div>
+                                <div class="item"><span>中风险</span><input><span>个</span></div>
+                            </li>
+                            <li>
+                                <div class="item marginRight"><p>数据库：</p></div>
+                                <div class="item"><span>危急</span><input><span>个</span></div>
+                                <div class="item"><span>高风险</span><input><span>个</span></div>
+                                <div class="item"><span>中风险</span><input><span>个</span></div>
+                            </li>
+                            <li>
+                                <div class="item marginRight"><p>中间件：</p></div>
+                                <div class="item"><span>危急</span><input><span>个</span></div>
+                                <div class="item"><span>高风险</span><input><span>个</span></div>
+                                <div class="item"><span>中风险</span><input><span>个</span></div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="itemCon">
+                    <div class="itemLeft"><span>病毒攻击</span></div>
+                    <div class="itemRight">
+                        <ul>
+                            <li><div class="item"><span>病毒查杀比例</span><input><span>%</span></div></li>
+                            <li><div class="item"><span>病毒数量</span><input><span>个</span></div></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="itemCon">
+                    <div class="itemLeft"><span>端口扫描</span></div>
+                    <div class="itemRight">
+                        <ul>
+                            <li><div class="item"><span>端口扫描数</span><input><span>次</span></div></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="itemCon">
+                    <div class="itemLeft"><span>强力攻击</span></div>
+                    <div class="itemRight">
+                        <ul>
+                            <li><div class="item"><span>强力攻击数</span><input><span>次</span></div></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="itemCon">
+                    <div class="itemLeft"><span>木马后门攻击</span></div>
+                    <div class="itemRight">
+                        <ul>
+                            <li><div class="item"><span>木马后门攻击数</span><input><span>次</span></div></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="itemCon">
+                    <div class="itemLeft"><span>拒绝访问攻击</span></div>
+                    <div class="itemRight">
+                        <ul>
+                            <li><div class="item"><span>拒绝访问攻击数</span><input><span>次</span></div></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="itemCon">
+                    <div class="itemLeft"><span>缓冲区溢出攻击</span></div>
+                    <div class="itemRight">
+                        <ul>
+                            <li><div class="item"><span>缓冲区溢出攻击数</span><input><span>次</span></div></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="itemCon">
+                    <div class="itemLeft"><span>网络蠕虫攻击</span></div>
+                    <div class="itemRight">
+                        <ul>
+                            <li><div class="item"><span>网络蠕虫攻击数</span><input><span>次</span></div></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="itemCon">
+                    <div class="itemLeft"><span>IP碎片攻击</span></div>
+                    <div class="itemRight">
+                        <ul>
+                            <li><div class="item"><span>IP碎片攻击数</span><input><span>次</span></div></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="btnList"><a class="btn">保存</a><a class="btn1">取消</a></div>
             </div>
         </div>
     </div>
