--- a/evaluationObject.html
+++ b/evaluationObject.html
@@ -27,6 +27,7 @@
                 <a class="btn">新增考评对象</a>
             </div>
             <div class="table">
+                <div class="btnList"><span class="btn">一键全部考评</span><span class="btn1">总体考评结果</span></div>
                 <table>
                     <thead>
                     <tr>
@@ -34,7 +35,7 @@
                         <th>上次考评对象</th>
                         <th>上次考评结果</th>
                         <th>考评结果接收邮箱</th>
-                        <th><span class="btn">一键全部考评</span><span class="btn1">总体考评结果</span></th>
+                        <th>操作</th>
                     </tr>
                     </thead>
                     <tbody id="table">
