--- a/evaluationObject.html
+++ b/evaluationObject.html
@@ -24,7 +24,7 @@
         <div class="layout">
             <div class="title">
                 <span>考评对象管理</span>
-                <a class="btn" v-on:click="objectInfo(0)">新增考评对象</a>
+                <a class="btn" @click="objectInfo(0)">新增考评对象</a>
             </div>
             <div class="table">
                 <div class="btnList"><span class="btn">一键全部考评</span><span class="btn1">总体考评结果</span></div>
@@ -58,14 +58,14 @@
     </div>
     <!--新增或编辑考评对象-->
     <div class="tcHide" v-if="isObjectInfoPop" :class="isObjectInfoPop?'display':''">
-        <div class="masking" v-on:click="objectInfo(0)"></div>
+        <div class="masking" @click="objectInfo(0)"></div>
         <div class="tcCon">
             <div class="tcTit"><span>考评对象管理</span></div>
             <div class="itemList special"><span>业务系统名称：</span><input type="text" v-model="objectName"/></div>
             <div class="itemList special"><span>考评结果接收邮件地址：<i>* 可填多个地址，以英文逗号分隔</i></span><input type="email" v-model="objectEmail"/></div>
             <div class="itemList special">
                 <span>启用考评结果自动审批：</span>
-                <div class="checkboxList"><div class="checkbox" v-on:click="autoEvaluation" :class="isAutoEvaluation?'checked':''"><img src="images/template/icon-check.png" alt=""></div></div>
+                <div class="checkboxList"><div class="checkbox" @click="autoEvaluation" :class="isAutoEvaluation?'checked':''"><img src="images/template/icon-check.png" alt=""></div></div>
             </div>
             <div class="itemList special flexStart">
                 <span>考评项目：</span>
@@ -73,19 +73,19 @@
                     <ul>
                         <li v-for="(item,index) in objectList">
                             <div class="checkboxList">
-                                <div class="checkbox" v-on:click="checkButton" :class=""><img src="images/template/icon-check.png" alt=""></div>
+                                <div @click="firstCheckButton(index)" class="checkbox item-first checked" ref="liFirst"><img src="images/template/icon-check.png" alt=""></div>
                                 <p>{{item.firstName}}</p>
                             </div>
                             <ul v-if="item.secList">
                                 <li v-for="(secItem,secIndex) in item.secList">
                                     <div class="checkboxList">
-                                        <div class="checkbox" v-on:click="checkButton"><img src="images/template/icon-check.png" alt=""></div>
+                                        <div @click="secCheckButton(secIndex,index)" class="checkbox item-sec checked" :id="index+'_'+secIndex"><img src="images/template/icon-check.png" alt=""></div>
                                         <p>{{secItem.secName}}</p>
                                     </div>
                                     <ul v-if="secItem.thirdList">
                                         <li v-for="(thirdItem,thirdIndex) in secItem.thirdList">
                                             <div class="checkboxList">
-                                                <div class="checkbox" v-on:click="checkButton"><img src="images/template/icon-check.png" alt=""></div>
+                                                <div @click="thirdCheckButton(thirdIndex,secIndex,index)" class="checkbox item-third checked" :id="index+'_'+secIndex+'_'+thirdIndex"><img src="images/template/icon-check.png" alt=""></div>
                                                 <p>{{thirdItem.thirdName}}</p>
                                             </div>
                                         </li>
